--- a/src/Menu.css
+++ b/src/Menu.css
@@ -87,6 +87,17 @@ header {
         border: none;
         cursor: pointer;
     }
+    .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #24252a;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 20px 0;
+    }
     .mobile-menu ul {
         display: flex;
         flex-direction: column;
