--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -20,9 +20,18 @@ main {
     height: 80vh;
 }
 
+.logo-empresa {
+    height: 80px;
+    margin: 15px 0;
+}
+
 footer {
     width: 100%;
     color: var(--color-neutral-40);
+}
+
+.column-footer {
+    margin: 15px;
 }
 
 .footer-link {
@@ -82,6 +91,7 @@ footer {
     flex-direction: column;
     gap: 0.75rem;
     list-style: none;
+    margin-bottom: 30px;
 }
 
 .footer-list .footer-link {
