--- a/src/Menu.css
+++ b/src/Menu.css
@@ -61,62 +61,38 @@ header {
     font-weight: 500;
     font-size: 1.1rem;
 }
-
-.mobile-menu-icon {
+.menu-toggle {
     display: none;
 }
 
-.mobile-menu {
-    display: none;
+
+
 }
 
 @media screen and (max-width: 730px) {
     .nav-bar {
         padding: 1.5rem 4rem;
     }
-    .nav-item {
-        display: none;
-    }
-    .login-button {
-        display: none;
-    }
-    .mobile-menu-icon {
+    .menu-toggle {
         display: block;
     }
-    .mobile-menu-icon button {
+    .menu-toggle button {
         background-color: transparent;
         border: none;
         cursor: pointer;
     }
-    .mobile-menu {
-        display: flex;
+    .nav-list {
+        display: none; /* Hide nav-list content on mobile */
         flex-direction: column;
         align-items: center;
         background-color: #24252a;
         width: 100%;
         position: absolute;
-        top: 60px;
+        top: 80px; /* Adjusted top position to account for header height */
         left: 0;
         padding: 20px 0;
     }
-    .mobile-menu ul {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 1rem;
-    }
-    .mobile-menu .nav-item {
-        display: block;
-        padding-top: 1.2rem;
-    }
-    .mobile-menu .login-button {
-        display: block;
-        padding: 1rem 2rem;
-    }
-    .mobile-menu .login-button button {
-        width: 100%;
-    }
-    .open {
+    .nav-list.open { /* Show and style nav-list when open */
         display: block;
     }
 }
