--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,14 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
 
 :root {
-    --color-neutral-0: #0e0c0c;
-    --color-neutral-10: #171717;
-    --color-neutral-30: #a8a29e;
-    --color-neutral-40: #f5f5f5;
+    --color-neutral-0: #f0f0f0; /* Light Gray - Background */
+    --color-neutral-10: #2e4a62; /* Navy Blue - Darkest Blue */
+    --color-neutral-20: #3a5f7f; /* Medium Blue */
+    --color-neutral-30: #779ecb; /* Light Blue - Text, Links */
+    --color-neutral-40: #ffffff; /* White - Text on Dark Backgrounds */
+    --color-button: #FFA500; /* Orange - Button color */
 
 }
 
 * {
+    
+    color: var(--color-neutral-40);
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
@@ -27,14 +31,15 @@ main {
 
 footer {
     width: 100%;
-    color: var(--color-neutral-40);
+    background-color: var(--color-neutral-10);
 }
 
 .column-footer {
     margin: 15px;
+    color: var(--color-neutral-40);
 }
 
-.footer-link {
+.footer-link, #footer-copyright{
     text-decoration: none;
 }
 
@@ -42,7 +47,7 @@ footer {
     background-color: var(--color-neutral-10);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    padding: 3rem 3.5rem;
+    padding: 3rem 2.5rem;
 }
 
 #footer-contacts h1 {
@@ -82,22 +87,21 @@ footer {
     background-color: #4267b3;
 }
 
-#whatsapp {
-    background-color: #25d366;
-}
+#whatsapp { background-color: #25d366; }
 
 .footer-list {
     display: inline-flex;
     flex-direction: column;
     gap: 0.75rem;
     list-style: none;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .footer-list .footer-link {
     color: var(--color-neutral-30);
     transition: all 0.4s;
 }
+.logo-empresa { filter: invert(1); }
 
 .footer-list .footer-link:hover {
     color: #7f37c9;
@@ -109,7 +113,7 @@ footer {
     gap: 1.5rem;
 }
 
-#footer-subscribe p {
+#footer-subscribe p, #footer-contacts p {
     color: var(--color-neutral-30);
 }
 
@@ -118,16 +122,17 @@ footer {
     align-items: center;
     background-color: var(--color-neutral-0);
     border-radius: 4px;
+    color: #000;
 }
 
 #input-group input {
     all: unset;
     padding: 0.75rem;
-    width: 100%;
+    width: 100%
 }
 
 #input-group button {
-    background-color: #7f37c9;
+    background-color: var(--color-button);
     border: none;
     color: var(--color-neutral-40);
     padding: 0px 1.25rem;
@@ -147,8 +152,8 @@ footer {
     justify-content: center;
     font-size: 0.9rem;
     padding: 1.5rem;
-    font-weight: 100;
 }
+
 
 @media screen and (max-width: 768px) {
     #footer-content {
