--- a/src/Menu.css
+++ b/src/Menu.css
@@ -5,14 +5,14 @@
     font-family: 'Inter', sans-serif;
 }
 
-header {
-    background-color: #24252a;
+header {  
+    background-color: #1e3a8a; /* Navy Blue */
     box-shadow: 0px 3px 10px #464646;
 }
 
 .nav-bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 1.5rem 6rem;
 }
 
@@ -21,7 +21,7 @@ header {
     align-items: center;
 }
 
-.logo h1 {
+.logo h1 {   
     color: #fff;
 }
 
@@ -42,20 +42,20 @@ header {
 }
 
 .nav-link {
-    text-decoration: none;
+    text-decoration: none;    
     font-size: 1.15rem;
-    color: #fff;
+    color: #f0f0f0; /* Light Gray */
     font-weight: 400;
 }
 
 .login-button button {
     border: none;
     padding: 10px 15px;
-    border-radius: 5px;
-    background-color: #0187a7;
+    border-radius: 5px;    
+    background-color: #0077b6; /* Lighter Blue */
 }
 
-.login-button button a {
+.login-button button a {    
     text-decoration: none;
     color: #fff;
     font-weight: 500;
@@ -82,7 +82,7 @@ header {
         display: none; /* Hide nav-list content on mobile */
         flex-direction: column;
         align-items: center;
-        background-color: #24252a;
+        background-color: #1e3a8a; /* Navy Blue */
         width: 100%;
         position: absolute;
         top: 80px; /* Adjusted top position to account for header height */
