--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -6,7 +6,7 @@
 }
 
 header {  
-    background-color: #1e3a8a; /* Navy Blue */
+    background-color: #007BFF; /* Navy Blue */
     box-shadow: 0px 3px 10px #464646;
 }
 
@@ -14,6 +14,7 @@ header {
     display: flex;
     justify-content: space-around;
     padding: 1.5rem 6rem;
+    margin-bottom: 50px;
 }
 
 .logo {
@@ -44,7 +45,7 @@ header {
 .nav-link {
     text-decoration: none;    
     font-size: 1.15rem;
-    color: #f0f0f0; /* Light Gray */
+    color: #fff; /* Light Gray */
     font-weight: 400;
 }
 
@@ -60,6 +61,11 @@ header {
     color: #fff;
     font-weight: 500;
     font-size: 1.1rem;
+}
+
+.nav-link:hover{
+    background-color: #0056b3;
+    padding: 5px;
 }
 .menu-toggle {
     display: none;
