--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: rgb(0, 30, 255);
   margin: 0;
   font-family: sans-serif; /* Use a generic sans-serif font */
   font-size: 16px; /* Set base font size */
