--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body {
   background-color: #f0f0f0; /* Light gray background */
 }
 
+/*product-management-container style*/
+.product-management-container {
+  background-color: yellowgreen;
+}
+
 
 .form-container, .table-container {
   display: flex;
