add padding-top: 10px em App.css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /*product-management-container style*/
 .product-management-container {
   background-color: yellowgreen;
+  padding-top: 10px;
 }
 
 
